--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,6 @@
   "extends": [
     "next",
     "next/core-web-vitals",
-    "prettier",
     "eslint:recommended",
     "plugin:react/recommended"
   ],
@@ -20,9 +19,8 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "prettier"],
+  "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "prettier/prettier": "error",
     "no-undef": "off",
     "no-unused-vars": "off",
     "react/prop-types": "off",
